Gnome 46: Fix invisible notifications in notification list

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -1155,7 +1155,7 @@ $slider_size: 19px;
             box-shadow: 3px 0px 0px 0px $selected_bg_color inset;
             border-radius: 1px 7px 7px 1px;
            }
-          border: none;
+        
           border-radius: 7px;
           background: lighten($bg_color, 2%);
           box-shadow: none;
